# hh-suite

./: .gitignore  CMakeLists.txt  lydonsnote.md
.run/: hhblits.run.xml
data/: querydon1.seq  tp53-one-line.fa  tp53.faa
src/: CMakeLists.txt  hhalign.cpp  hhalignment.cpp  hhalignment.h  hhblits.cpp  hhblits.h  hhblits_don.cpp  hhblits_don.h  hhblits_test.cpp  hhfunc.cpp  hhfunc.h
test/: CMakeLists.txt  hhblits_test.cpp
